--- a/ExamPortal/src/main/resources/application.properties
+++ b/ExamPortal/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
 
